deployment-files/kustomize/influxdb/influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
spec:
  selector:
    app: influxdb
  ports:
    - name: "8086"
      port: 8086
      targetPort: 8086
    - name: "8082"
      port: 8082
      targetPort: 8082
    - name: "8089"
      port: 8089
      protocol: UDP
      targetPort: 8089
